Widgets Block: Set Height To Potentially Prevent Icon Being Clipped

--- a/base/css/admin.less
+++ b/base/css/admin.less
@@ -966,8 +966,9 @@ div.siteorigin-widget-form {
 
 		// WB icon for placeholder.
 		& > .components-placeholder__label {
-			background: url("img/bundle-icon.png") no-repeat left;
 			background-size: 20px;
+			background: url("img/bundle-icon.png") no-repeat left;
+			height: 20px;
 			padding-left: 25px;
 		}
 
